--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
+    "html-to-image": "^1.9.0",
+    "html2canvas": "^1.3.2",
     "re-resizable": "^6.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3"
   },
