--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
